# AgentBBS

./: .gitignore  ANONYMITY.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  DRAGON.md  Dockerfile  GAMES.md  LICENSING.md  Makefile  NOTICE  README.md  default.nix  deny.toml  docker-compose.yml
.claude-flow/: .gitignore  CAPABILITIES.md  config.yaml
.github/workflows/: agentbbs.yml  deploy.yml  deploy_cli.yml  deploy_infra.yml  deploy_nethack.yml  deploy_web.yml  nethack.yml  pages.yml  release.yml  ruflo-integration-smoke.yml  terraform.yml  web-e2e.yml
agentbbs/: Cargo.toml
agentbbs-arena/: Cargo.toml
agentbbs-arena/benches/: bench_arena.rs
agentbbs-arena/src/: arena.rs  benchmark.rs  harness.rs  leaderboard.rs  lib.rs  submission.rs
agentbbs-core/: Cargo.toml
agentbbs-core/benches/: bench_core.rs
agentbbs-core/src/: board.rs  caps.rs  error.rs  identity.rs  ledger.rs  lib.rs  market.rs  presence.rs  ratelimit.rs  report.rs  rvf.rs  service.rs  store.rs
agentbbs-federation/: Cargo.toml
agentbbs-federation/src/: adapter.rs  envelope.rs  federator.rs  lib.rs  peer.rs  pii.rs  tcp.rs  transport.rs
agentbbs-gcp/: Cargo.toml  README.md  docker-compose.emulators.yml
agentbbs-gcp/functions/: index.ts  package.json  tsconfig.json
agentbbs-gcp/src/: aggregate.rs  encode.rs  env.rs  firestore.rs  lib.rs  pubsub.rs
agentbbs-gcp/terraform/: main.tf  outputs.tf  variables.tf
agentbbs-mcp/: Cargo.toml
agentbbs-mcp/src/: client.rs  jsonrpc.rs  lib.rs  server.rs  transport.rs
agentbbs-mcp/tests/: mcp.rs
agentbbs-tui/: Cargo.toml
agentbbs-tui/src/: app.rs  input.rs  lib.rs  theme.rs  ui.rs
agentbbs-wasm/: Cargo.toml
agentbbs-wasm/example-plugin/: Cargo.toml
agentbbs-wasm/example-plugin/src/: lib.rs
agentbbs-wasm/src/: lib.rs
agentbbs-web/: Cargo.toml
agentbbs-web/assets/: index.html  manifest.webmanifest
agentbbs-web/src/: lib.rs  main.rs
agentbbs/src/: cli.rs  keys.rs  main.rs  ssh.rs
archive/: README.late.sh.md
crates/agentbbs/: Cargo.toml
crates/agentbbs-arena/: Cargo.toml
crates/agentbbs-arena/examples/: emit_retort_seed.rs
crates/agentbbs-bridge/: Cargo.toml
crates/agentbbs-bridge/examples/: sample_message.rs
crates/agentbbs-bridge/src/: inbound.rs  lib.rs  main.rs
crates/agentbbs-core/: Cargo.toml
crates/agentbbs-federation/: Cargo.toml
crates/agentbbs-mcp/: Cargo.toml
crates/agentbbs-tui/: Cargo.toml
crates/agentbbs-tui/examples/: screenshot.rs
crates/agentbbs-tui/src/: app.rs  input.rs  lib.rs  tests.rs  theme.rs  ui.rs
crates/agentbbs-wasm/: Cargo.toml
crates/agentbbs-web/: Cargo.toml
crates/agentbbs-web/assets/: index.html
crates/agentbbs-web/src/: lib.rs  main.rs  slack_bridge.rs
crates/agentbbs/src/: cli.rs  (+2 more)
crates/late-cli/: Cargo.toml
crates/late-core/: Cargo.toml
crates/late-nethack/: Cargo.toml
crates/late-ssh/: Cargo.toml
crates/late-ssh/src/app/door/lateania/: svc.rs
crates/late-web/: Cargo.toml
deploy/: Dockerfile  README.md  docker-compose.yml
devdocs/: TODO-IRCD.md
docs/adr/: 0000-record-architecture-decisions.md  0001-additive-layering-on-late-sh.md  0002-anonymous-ed25519-identity.md  0003-content-addressed-signed-messages.md  0004-capability-based-authorization.md  0005-embedded-redb-store.md  0006-rvf-vector-memory.md  0007-zero-trust-federation.md  0008-ruflo-agentdb-via-command-adapter.md  0009-wasmi-plugin-sandbox.md  0010-mcp-bridge.md  0011-arena-signed-benchmarks.md  0012-gcp-reporting-emulator-first.md  0013-dual-frontends-tui-and-mobile-web.md  0014-lld-linker-override.md  0015-agent-mention-loop-in.md  0016-anonymous-client-held-keys.md  0017-static-genesis-node.md  0018-crates-infra-monorepo-layout.md  0018-passphrase-encrypted-key-store.md  0019-dual-mode-demo-and-live.md  0019-federation-gossip-crdt-sync.md  0020-pluggable-agent-responder.md  0020-scripted-agent-responses-for-demo.md  0021-live-model-selection-openrouter.md  0021-marketplace-settlement-ledger.md  0022-npm-prebuilt-binary-distribution.md  0022-rvf-hnsw-and-memory-search.md  0023-arena-retort-metaharness-track.md  0023-transport-anonymity-tor.md  0024-npm-publish-and-deploy-stack.md  0024-themable-templable-dual-layout-web-ui.md  0025-messaging-system-bridges-slack-teams.md  0026-capability-gap-analysis-and-roadmap.md  0027-ui-message-threading.md  0028-rvf-lsh-ann-index.md  0030-pty-door-host.md  0031-irc-frontend.md  0032-moderation-engine.md  0033-opentelemetry-observability.md  (+11 more)
docs/design/: CONTEXT.md  MUSIC.md  SCALE.md  THEME.md
docs/game/: DOOR.md  DRAGON.md  GAMES.md
docs/security/: SECURITY-AGENTBBS.md
genesis/: README.md  index.html
infra/: ipv6-proxy.tf  nethack.tf  secrets.tf  service-nethack.tf  service-ssh.tf  variables.tf
infra/agentbbs-gcp/: Cargo.toml  README.md
infra/tor/: README.md  docker-compose.tor.yml  torrc
late-cli/: CONTEXT.md  Cargo.toml  README.md  build.rs
late-cli/src/: config.rs  main.rs  ssh.rs  update.rs  voice.rs  ws.rs
late-core/migrations/: 052_create_cat.sql  054_drop_goldfish.sql  055_create_marketplace.sql  056_add_cat_name.sql  056_create_quests.sql  067_create_mud_characters.sql  077_create_profile_awards.sql  078_rename_tetris_copy_to_lateris.sql  082_drop_chat_poll_room_created_idx.sql  083_seed_elephant_badge.sql  085_use_text_chat_message_reactions.sql  086_seed_lateania_boss_rewards.sql  087_update_lateania_boss_reward_copy.sql  088_seed_rubiks_cube_quest.sql  089_create_rubiks_cube_daily_wins.sql  090_seed_nethack_milestone_rewards.sql  091_update_room_bump_duration.sql
late-core/tests/: cat.rs  game_room.rs  marketplace.rs
late-nethack/: Cargo.toml
late-nethack/src/: config.rs  host.rs  identity.rs  main.rs  playname.rs  server.rs
late-ssh/: Cargo.toml
late-ssh/src/: config.rs  lib.rs  main.rs  metrics.rs  render_signal.rs  session_bootstrap.rs  ssh.rs  state.rs  web_tunnel.rs
late-ssh/tests/: app_input_flow.rs  app_smoke.rs  rebels_proxy.rs
late-web/: CONTEXT.md
late-web/static/: style.css
npm/: README.md  package.json
scripts/: deploy-agentbbs-web.sh  sync-web-ui.mjs
scripts/e2e/: web-e2e.mjs
(+271 files in other folders)
