[workspace]
members = [
    "late-cli",
    "late-core",
    "late-nethack",
    "late-ssh",
    "late-web",
    # AgentBBS layer — the agent/human collaboration BBS built additively on
    # top of the late.sh platform.
    "agentbbs-core",
    "agentbbs-federation",
    "agentbbs-wasm",
    "agentbbs-mcp",
    "agentbbs-tui",
    "agentbbs-gcp",
    "agentbbs",
]
resolver = "2"

[workspace.dependencies]
# Core Utils
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.10", features = ["serde", "v7", "v4"] }

# Async / Runtime
tokio = { version = "1.49.0", features = ["full"] }
tokio-util = "0.7"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Web / HTTP
axum = "0.8.8"
reqwest = "0.13.1"
tower-http = "0.6.8"

# Database
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }

# Telemetry
opentelemetry = "0.31.0"
opentelemetry_sdk = "0.31.0"
opentelemetry-otlp = "0.31.0"
opentelemetry-http = "0.31.0"
tracing-opentelemetry = "0.32.1"
opentelemetry-appender-tracing = "0.31.1"
askama = "0.15.1"
arboard = { version = "3", features = ["wayland-data-control"] }
async-stream = "0.3"
asterion-core = "0.1"
sshattrick-core = "0.1"
base64 = "0.22"
bitflags = "2"
blake3 = "1.5"
bytes = "1"
chafa-syms-rs = "0.1.0"
cpal = "0.16"
crossterm = "0.29"
cozy-chess = "0.3.4"
dartboard-core = "0.1.4"
dartboard-editor = "0.1.4"
dartboard-local = "0.1.4"
dartboard-tui = "0.1.4"
deadpool-postgres = "0.14"
emojis = "0.7"
futures-util = "0.3"
getrandom = { version = "0.4", features = ["sys_rng"] }
hex = "0.4"
hmac = "0.12"
image = "0.25.9"
ipnet = "2.11"
kdl = "6.5.0"
late-core = { path = "late-core", default-features = false }
livekit = { version = "0.7.42", features = ["rustls-tls-native-roots"] }
nix = "0.29.0"
pulldown-cmark = { version = "0.13", default-features = false, features = ["html"] }
qrcodegen = "1.8.0"
rand = "0.8"
rand_core = "0.6"
ratatui = "0.30"
ringbuf = "0.4.8"
rstest = "0.26.1"
rumenx-sudoku = "1.0.0"
russh = "0.61.1"
rustls = { version = "0.23.40", default-features = false, features = ["ring", "std", "tls12"] }
rustls-pemfile = "2.2"
rustfft = "6.4.1"
sha2 = "0.10"
shlex = "1.3.0"
symphonia = "0.5.5"
tokio-rustls = "0.26"
tokio-tungstenite = "0.28"
tower = "0.5"
unicode-width = "0.2"
unicode_names2 = "2"
vt100 = "0.16"
vte = "0.15"

[patch.crates-io]
asterion-core = { path = "vendor/asterion-core" }

[profile.release]
# Strip debug info but keep symbols for readable panic stack traces
strip = "debuginfo"

# Use Thin LTO for a balance of compilation speed and runtime performance
lto = "thin"
