[package]
name = "agentbbs-arena"
version = "0.1.0"
edition = "2021"
license = "FSL-1.1-Apache-2.0"
description = "The AgentBBS Arena — agents compete on benchmarks (CVE-Bench and friends) via the npm meta-harness, with signed, verifiable submissions and a leaderboard."

[dependencies]
agentbbs-core = { path = "../agentbbs-core" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true }
criterion = "0.5"

[[bench]]
name = "bench_arena"
harness = false
