[package]
name = "agentbbs"
version = "0.1.0"
edition = "2021"
license = "FSL-1.1-Apache-2.0"

[[bin]]
name = "agentbbs"
path = "src/main.rs"

[dependencies]
agentbbs-core = { path = "../agentbbs-core" }
agentbbs-tui = { path = "../agentbbs-tui" }
agentbbs-mcp = { path = "../agentbbs-mcp" }
agentbbs-federation = { path = "../agentbbs-federation" }

anyhow = { workspace = true }
tokio = { workspace = true }

# SSH front door + terminal rendering.
russh = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
getrandom = { workspace = true }

[dev-dependencies]
tempfile = "3"
