[package]
name = "late-cli"
version = "0.1.0"
edition = "2024"
license = "LicenseRef-FSL-1.1-Apache-2.0"

[features]
default = []
otel = []

[[bin]]
name = "late"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
base64.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
cpal.workspace = true
crossterm.workspace = true
futures-util.workspace = true
getrandom.workspace = true
rand_core.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
ringbuf.workspace = true
russh.workspace = true
rustls.workspace = true
rustfft.workspace = true
shlex.workspace = true
symphonia = { workspace = true, features = ["mp3"] }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-native-roots"] }

# Embedded webview for CLI-side YouTube (see late-ssh/src/app/audio/CONTEXT.md §17).
# Linux requires WebKitGTK 4.1 dev/runtime packages plus GStreamer plugins
# including gst-plugins-good (`autoaudiosink`) for media playback.
wry = "0.55"
tao = "0.34"

[target.'cfg(unix)'.dependencies]
nix = { workspace = true, features = ["term", "process", "signal", "fs"] }

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = { version = "=2.0.2", features = ["v2_38"] }

[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "windows"))'.dependencies]
arboard.workspace = true
image.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
livekit.workspace = true
