[package]
name = "late-core"
version = "0.1.0"
edition = "2024"
license = "LicenseRef-FSL-1.1-Apache-2.0"

[features]
default = []
testing = []
otel = [
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-otlp",
    "tracing-opentelemetry",
    "opentelemetry-appender-tracing",
    "opentelemetry-http",
]

[dependencies]
# Core Utils
anyhow = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

# Async Runtime
tokio = { workspace = true }
tokio-util = { workspace = true }
deadpool-postgres.workspace = true
tokio-postgres = { workspace = true }

# Crypto / RNG
getrandom = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }

# HTTP Client
reqwest = { workspace = true, features = ["blocking"] }
rustfft.workspace = true
symphonia = { workspace = true, features = ["mp3"] }
image.workspace = true
axum.workspace = true

# Telemetry (optional, heavy deps — gated behind "otel" feature)
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { workspace = true, features = ["grpc-tonic", "trace", "metrics", "logs"], optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry-appender-tracing = { workspace = true, optional = true }
opentelemetry-http = { workspace = true, optional = true }

[dev-dependencies]
late-core = { workspace = true, features = ["testing"] }
