[package]
name = "late-ssh"
version = "0.1.0"
edition = "2024"
license = "FSL-1.1-Apache-2.0"

[features]
default = []
otel = ["late-core/otel", "opentelemetry", "tracing-opentelemetry", "opentelemetry-http"]

[dependencies]
late-core.workspace = true
asterion-core.workspace = true
sshattrick-core.workspace = true
nes = { path = "../vendor/potatis/nes" }
irc-proto = { path = "../vendor/irc-proto" }

# Core Utils
anyhow = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
ipnet.workspace = true
kdl.workspace = true

# Async Runtime
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tokio-util = { workspace = true, features = ["codec"] }
futures-util = { workspace = true }
rustls.workspace = true
rustls-pemfile.workspace = true

# Memory allocator
tikv-jemallocator = "0.6"

# Database
tokio-postgres = { workspace = true }
cozy-chess.workspace = true
crossterm.workspace = true
dartboard-core.workspace = true
dartboard-editor.workspace = true
dartboard-local.workspace = true
dartboard-tui.workspace = true
ratatui.workspace = true
ratatui-textarea = { version = "0.9.1", default-features = false }
unicode-width.workspace = true
unicode_names2.workspace = true
emojis.workspace = true
getrandom.workspace = true
rand_core = { workspace = true, features = ["std"] }
base64.workspace = true
bitflags.workspace = true
chafa-syms-rs.workspace = true
blake3.workspace = true
hex.workspace = true
hmac.workspace = true
sha2.workspace = true
vt100.workspace = true
vte.workspace = true
russh.workspace = true

# Web / HTTP
axum = { workspace = true, features = ["ws"] }
reqwest = { workspace = true, features = ["json"] }
image.workspace = true
tower-http = { workspace = true, features = ["cors", "trace"] }
qrcodegen.workspace = true
rumenx-sudoku.workspace = true

# Telemetry (optional — gated behind "otel" feature)
opentelemetry = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry-http = { workspace = true, optional = true }
rand.workspace = true

[target.'cfg(unix)'.dependencies]
# PTY allocation for the nethack door game (openpty/setsid/TIOCSWINSZ).
nix = { workspace = true, features = ["term", "process"] }

[dev-dependencies]
late-core = { workspace = true, features = ["testing"] }
rstest.workspace = true
