[package]
name = "late-web"
version = "0.1.0"
edition = "2024"
license = "FSL-1.1-Apache-2.0"

[features]
default = []
otel = [
    "late-core/otel",
    "opentelemetry",
    "tracing-opentelemetry",
    "opentelemetry-http",
]

[dependencies]
late-core.workspace = true
dartboard-core.workspace = true

# Core Utils
anyhow = { workspace = true }
bytes.workspace = true
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Async Runtime
tokio = { workspace = true }
askama.workspace = true
async-stream.workspace = true
pulldown-cmark.workspace = true

# Web / HTTP
axum = { workspace = true }
futures-util.workspace = true
reqwest = { workspace = true, features = ["json"] }
tower-http = { workspace = true, features = ["fs", "trace"] }

# Telemetry (optional — gated behind "otel" feature)
opentelemetry = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry-http = { workspace = true, optional = true }

[dev-dependencies]
tower.workspace = true
